# cmake-basics

./: .gitignore  CMakeLists.txt  README.md
cmake/: InputConfig.cmake.in  add_test_executable.cmake  code-coverage.cmake
external-application/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt  conanfile.txt
project/src/: CMakeLists.txt
project/src/app/: CMakeLists.txt  main.cpp
project/src/libA/: CMakeLists.txt  mylibA_headerimpl.cpp
project/src/libA/include/mylibA/: mylibA_header.h
project/src/libB/: CMakeLists.txt
project/src/libB/include/mylibB/: mylibB_header.h
project/tests/: CMakeLists.txt
project/tests/simpletest/: example1.cpp
src/libB/: mylibB_headerimpl.cpp
tests/simpletest/: CMakeLists.txt  example2.cpp
tools/: genhtml.perl
